--- a/pages/myHome/myHome.wxml
+++ b/pages/myHome/myHome.wxml
@@ -3,20 +3,16 @@
   <view class='display-flex home-head'>
     <image class='head-img' src='{{user.avatarUrl}}' />
     <view class='flex-full'>{{user.nickName}}</view>
-    <Icon wx:if='{{userInfo.hasShop}}' iconName='namecard' width='30px' height='40rpx;' bindtap='goNamecard'></Icon>
   </view>
   <view class='display-flex home-center'>
     <view bindtap="goFateList" data-type="1">
-      <view class='number'>{{likeMe}}</view>
-      <view class='small-text'>喜欢我</view>
+      <view class='small-text'>试装：{{likeMe}}</view>
     </view>
     <view bindtap="goFateList"  data-type="2">
-      <view class='number'>{{meLike}}</view>
-      <view class='small-text'>我喜欢</view>
+      <view class='small-text'>订单：{{meLike}}</view>
     </view>
     <view bindtap="goFateList"  data-type="3">
-      <view class='number'>{{likeEachOther}}</view>
-      <view class='small-text'>相互喜欢</view>
+      <view class='small-text'>喜欢：{{likeEachOther}}</view>
     </view>
   </view>
 
