--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -5,7 +5,7 @@
     <cover-image src="{{selected === index ? item.selectedIconPath : item.iconPath}}"></cover-image>
     <cover-view style="color: {{selected === index ? selectedColor : color}}">{{item.text}}</cover-view>
   </cover-view>
-  <cover-view  class="tab-bar-item" data-path="/home/home" data-index="2" bindtap="switchTab">
+  <cover-view  class="tab-bar-item" data-path="../myHome/myHome" data-index="2" bindtap="switchTab">
     <!--cover-image src="../public/image/menu_3_active.png"></cover-image-->
     <cover-view class="big-item">
       <cover-view style="font-size: 25px;padding-top: 10px;">VR</cover-view>
