--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -1,15 +1,23 @@
 <!--miniprogram/custom-tab-bar/index.wxml-->
 <cover-view class="tab-bar">
   <cover-view class="tab-bar-border"></cover-view>
-  <cover-view wx:for="{{list}}" wx:key="index" class="tab-bar-item" data-path="{{item.pagePath}}" data-index="{{index}}" bindtap="switchTab">
+  <!--cover-view wx:for="{{list}}" wx:key="index" class="tab-bar-item" data-path="{{item.pagePath}}" data-index="{{index}}" bindtap="switchTab">
     <cover-image src="{{selected === index ? item.selectedIconPath : item.iconPath}}"></cover-image>
     <cover-view style="color: {{selected === index ? selectedColor : color}}">{{item.text}}</cover-view>
+  </cover-view-->
+  <cover-view class="tab-bar-item" data-path="../home/home" data-index="0" bindtap="switchTab">
+    <cover-image src="{{selected === '0' ? '../public/image/menu_1_active.png' : '../public/image/menu_1.png'}}"></cover-image>
+    <cover-view style="color: {{selected === '0' ? selectedColor : color}}"></cover-view>
   </cover-view>
-  <cover-view  class="tab-bar-item" data-path="../myHome/myHome" data-index="2" bindtap="switchTab">
+  <cover-view  class="tab-bar-item" data-path="../fate/fate" data-index="1" bindtap="switchTab">
     <!--cover-image src="../public/image/menu_3_active.png"></cover-image-->
     <cover-view class="big-item">
       <cover-view style="font-size: 25px;padding-top: 10px;">VR</cover-view>
       <cover-view >试装</cover-view>
     </cover-view>
+  </cover-view>
+  <cover-view class="tab-bar-item" data-path="../myHome/myHome" data-index="2" bindtap="switchTab">
+    <cover-image src="{{selected === '2' ? '../public/image/menu_3_active.png' : '../public/image/menu_3.png'}}"></cover-image>
+    <cover-view style="color: {{selected === '2' ? selectedColor : color}}"></cover-view>
   </cover-view>
 </cover-view>
