--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -5,37 +5,10 @@
 .home-page .head {
   background: #efefef;
   border-radius: 8rpx;
-  height: 260rpx;
+  /* height: 260rpx; */
   margin-bottom: 20rpx;
   background-repeat:repeat;
   background-size:100%;
-}
-
-.home-page .head image {
-  height: 260rpx;
-  border-radius: 8rpx;
-  width: calc(100% - 80rpx);
-  position: absolute;
-}
-
-.home-page .head .intro {
-  height: 220rpx;
-  display: flex;
-  align-items: center;
-  padding: 0 60rpx;
-  color: #ffffff;
-  text-shadow: 4rpx 4rpx 8rpx #00000063;
-  position: absolute;
-}
-
-.home-page .head .address {
-  text-align: right;
-  padding-right: 60rpx;
-  font-size: 24rpx;
-  color: #ffffff;
-  position: absolute;
-  right: 0;
-  top: 260rpx;
 }
 
 .home-page .list {
@@ -45,7 +18,7 @@
 }
 
 .home-page .list-box {
-  width: 32%;
+  width: 49%;
   box-shadow: 2rpx 2rpx 4rpx #9B9B9B50;
   display: flex;
   align-items: center;
@@ -64,27 +37,28 @@
 
 .home-page .list-box image {
   width: 100%;
-  height: auto;
+  height: 700rpx;
 }
 
-.home-page .content-block {
-  border-radius: 8rpx;
-  color: #333333;
-  padding: 30rpx;
-  border: 1rpx solid #efefef;
-  box-shadow: 0 4rpx 8rpx #00000050;
-  margin-bottom: 20rpx;
+.home-page .swiper-item {
+  width: 100%;
+  height: 100%;
 }
 
-.home-page .content-block .title {
-  font-size: 36rpx;
-  padding-bottom: 20rpx;
-  font-weight: 600;
+.home-page .sub-title {
+  padding: 40rpx;
+  text-align: center;
+  color: #000000;
 }
 
-.home-page .content-block .block-cell {
-  font-size: 32rpx;
-  padding: 20rpx 0;
-  border-bottom: 1rpx solid #efefef;
+.item-1 {
+ background: #000000;
 }
 
+.item-2 {
+ background: #119900;
+}
+
+.item-3 {
+ background: #0055ff;
+}
