--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -45,6 +45,11 @@
   height: 100%;
 }
 
+.home-page .swiper-item image {
+  width: 100%;
+  height: 320rpx;
+}
+
 .home-page .sub-title {
   padding: 40rpx;
   text-align: center;
