--- a/pages/myHome/myHome.wxss
+++ b/pages/myHome/myHome.wxss
@@ -1,6 +1,7 @@
 
 .myHome {
   background: #fbf9fc;
+  font-size: 28rpx;
 }
 
 .myHome .home-head {
@@ -9,6 +10,7 @@
   background-color: #FFFFFF;
   display: flex;
   align-items: center;
+  font-size: 32rpx;
 }
 
 .myHome .home-head .head-img {
@@ -29,7 +31,6 @@
 
 .myHome .small-text {
   padding: 4rpx;
-  font-size: 32rpx;
   color: #4A4A4A;
   padding-left: 5px;
 }
@@ -43,7 +44,7 @@
 .myHome .home-cell-list {
   padding: 20rpx 0rpx;
   background-color: #ffffff;
-  border-bottom: 1rpx solid #efefef;
+  border-bottom: 1rpx solid #D8D8D860;
 }
 
 /* .myHome .home-cell-list + .home-cell-list {
