--- a/pages/myHome/myHome.wxml
+++ b/pages/myHome/myHome.wxml
@@ -17,22 +17,22 @@
   </view>
 
   <view class='display-flex home-center' style="border-top: 1rpx solid #D8D8D870">
-    <view data-type="1">
+    <view bindtap="goOrderDetail" data-title="未付款订单">
       <icon iconName="nopay" width='51rpx' height='50rpx' />
       <view class='small-text'>未付款</view>
       <view class="badge">1</view>
     </view>
-    <view data-type="2">
+    <view bindtap="goOrderDetail" data-title="已付款订单">
       <icon iconName="payed" width='38rpx' height='46rpx' />
       <view class='small-text'>已付款</view>
       <view class="badge">1</view>
     </view>
-    <view data-type="3">
+    <view bindtap="goOrderDetail" data-title="已完成订单">
       <icon iconName="complete" width='38rpx' height='44rpx' />
       <view class='small-text'>已完成</view>
       <view class="badge">15</view>
     </view>
-    <view data-type="4">
+    <view bindtap="goOrderDetail" data-title="物流中心">
       <icon iconName="logistics" width='58rpx' height='42rpx' />
       <view class='small-text'>物流中心</view>
       <view class="badge">99+</view>
