--- a/components/noOrder/noOrder.wxml
+++ b/components/noOrder/noOrder.wxml
@@ -1,7 +1,7 @@
 
 <view class="noOrder">
   <view class="content">
-    <image src="../../public/image/no-order.png" mode="aspectFit" />
+    <image src="../../public/image/noOrder.png" mode="aspectFit" />
     <view class="text">
       还没有相关订单
     </view>
