--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -1,1 +1,52 @@
-/* pages/orderDetail/orderDetail.wxss */
+.orderPage {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: #F7F7F7;
+}
+
+.orderDetail {
+  background: #ffffff;
+  color: #9B9B9B;
+  font-size: 24rpx;
+  padding-bottom: 40rpx;
+}
+
+.orderDetail .orderNo  {
+  color: #000000;
+  font-size: 28rpx;
+  padding: 20rpx 40rpx;
+  border-top: 1rpx solid  #D8D8D860;
+  border-bottom: 1rpx solid  #D8D8D860;
+}
+
+.orderDetail .address {
+  padding: 20rpx 40rpx 50rpx 40rpx;
+}
+
+.orderDetail .order-info {
+  padding: 30rpx 0;
+  border-top: 6rpx solid #F7F7F7;
+  border-bottom: 6rpx solid #F7F7F7;
+  font-size: 20rpx;
+}
+
+.orderDetail .order-info image {
+  width: 105px;
+  height: 111px;
+  padding: 0 20rpx;
+}
+
+.orderDetail .activity {
+  padding: 40rpx;
+  line-height: 50rpx;
+}
+
+.orderDetail .btn {
+  background: #000000;
+  color: #ffffff;
+  font-size: 32rpx;
+  line-height: 80rpx;
+  border-radius: 8rpx;
+  margin-top: 40rpx;
+}
