--- a/pages/expressDetail/expressDetail.wxml
+++ b/pages/expressDetail/expressDetail.wxml
@@ -15,11 +15,13 @@
             <view class="flex-full">
               <view style="color: #000000; font-size: 26rpx">纯羊毛定制打底羊毛衫</view>
               <view>轻盈柔软柔糯如肌双倍保暖</view>
-              <view class="display-flex" style="padding: 40rpx 0 60rpx 0;">
-                <view class="flex-full">驼色款</view><view style="color: #000000">x1</view>
+              <view class="display-flex" style="padding: 40rpx 0 20rpx 0;">
+                <view class="flex-full">驼色款</view><view style="color: #000000">¥2130</view>
               </view>
-              <view>预计2019-09-21前发货</view>
             </view>
+          </view>
+          <view class="subtitle">
+            支付信息
           </view>
           <view class="activity">
             <view>活动优惠：-¥32</view>
