--- a/pages/clothing/clothing.wxml
+++ b/pages/clothing/clothing.wxml
@@ -3,8 +3,8 @@
 <!-- <web-view src="{{url}}" bindmessage="postMessage" /> -->
 
 <!-- <web-view src="https://www.peajs.top/threejs-loader-demo-master/loader.html" /> -->
-<!-- <web-view src="https://www.peajs.top/web-view/loader.html" /> -->
-<web-view src="http://localhost:8000/loader.html" />
+<web-view src="https://www.peajs.top/web-view/loader.html" /> 
+<!-- <web-view src="http://localhost:8000/loader.html" />-->
  <!-- </view> -->
 
 
